# vulkan-small-project

./: CMakeLists.txt  README.md  TODO.txt
shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: camera.cpp  camera.hpp  engine.cpp  engine.hpp  enteties.cpp  enteties.hpp  initMeshes.cpp  initMeshes.hpp  initializers.cpp  initializers.hpp  main.cpp  vertexData.cpp  vertexData.hpp
